chamber/styles/small.css
body{
    margin: 0 20px;
}

/** USING GOOGLE FONT Playfair Display IN ALL THE TEXT ELEMENTS **/
h1,h2,h3,p,li,a,span{
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-style: normal;
}


/** HEADER **/
header{
    padding-top: 10px;
    display: grid;
    grid-template-columns: repeat(1,1fr);
    align-items: center;
    justify-content: center;
    border-bottom: 1px solid #ddd;
}

.header-title{
    padding: 15px;
    font-size: 18px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;  
    gap: 10px;
}

.header-title img{
    width: 36px;
    height: auto;
}

nav{
   border-top: 1px solid #ddd;
   margin-top: 10px;
   width: 100%; 
}

nav ul{
    font-size: 18px;
    list-style: none;
    margin-block: 0px;
    padding-inline-start: 0px;
}

nav ul li{
    padding: 10px;
    text-align: center;
}

/** BACKGROUND COLOR FOR HOVER **/
nav ul li:hover{
    cursor: pointer;
    background-color: whitesmoke;
}

nav ul li a{
    text-decoration: none;
    color: black;
}

#nav-bar{
    display: none;
}

#nav-bar.show{
    display: block;
}

/** HAMBURGER BUTTON**/
.hamburger{
    background: none;
    border:none;
    color:#3D405B;
    cursor:pointer;
}

.hamburger::after{
    content:"\2630";
    font-size:2rem;
}

.hamburger.show::after{
    content:"\00D7";
}

/** View Style **/
.view-style{
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    gap: 20px;
    margin: 20px 0;
}

.view-style > button{
    border: 1px solid #ddd;
    border-radius: 5px;
    background-color: transparent;
    font-size: 28px;
    padding: 5px;
    min-width: 120px;
}

.view-style > button:hover{
    cursor: pointer;
    background-color: whitesmoke;
}

.view-style > button.active{
    border-color: black;
    background-color: black;
    color: white;
}

/** VIEW STYLES **/
.cards-grid{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px,1fr));
    grid-gap: 0.5rem; 
    gap: 0.5rem; /** For browsers where grid-gap is not supported **/
}

.cards-list{
    display: block;
}

.cards-list > .card{
    margin: 20px 0;
}

.card{
    border: 1px solid #ddd;
    box-shadow: 0 5px 5px #ddd;
    width: auto;
    min-width: 320px;
    height: auto;
    display: grid;
    grid-template-columns: repeat(2,minmax(0,1fr));
    align-items: center;
    justify-content: center;
    grid-gap: 10px;
    gap: 10px; /** For browsers where grid-gap is not supported **/
    padding: 10px;
    box-sizing: border-box;
}

.card > .card-header{
    padding-bottom: 20px;
    border-bottom: 1px solid #ddd;
    grid-column: span 2;
    width: 100%;
    text-align: center;
}

.card-header > .membership-member,
.card-header > .membership-silver,
.card-header > .membership-gold {
    text-align:center;
    padding: 10px;
    border: 1px solid #ddd;
    background-color: black;
    color: white;
}

.card > .card-left-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card > .card-left-container > img{
    width: 150px;
    height: auto;
    object-fit: cover;
}

.card > .card-right-container{
    width: 100%;
    word-break: break-word;
    overflow-wrap: break-word;
}

.card-right-container > p{
    display: flex;
    flex-direction: column;
}

.card-right-container > p > a{
    text-decoration: none;
    color:crimson;
}


/** Footer **/
footer{
    margin-top: 20px;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    padding: 15px;
    border-top: 1px solid #ddd;
    background-color: whitesmoke;
    gap: 20px;
}

footer div{
    text-align: start;
}

footer div span{
    font-weight: 600;
}

.contact-information a{
    margin: 10px 0;
    display: block;
    text-decoration: none;
    color: crimson;
    font-weight: bold;
}

.social-media {
        display: flex;
        flex-direction: column;
        gap: 30px;
}

.social-media ul{
    margin-top: 20px;
    font-size: 18px;
    list-style: none;
    margin-block: 0px;
    padding-inline-start: 0px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;
    gap: 15px;
}

.social-media ul li a{
    color: black;
    text-decoration: none;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    gap: 10px;
}

.social-media ul li a img{
    width: 40px;
    height: auto;
}

